--- a/main.css
+++ b/main.css
@@ -1,7 +1,16 @@
-.coloumn{
+.column {
     float: left;
     width: 100%;
     height: 50px;
     background-color: #000;
+    margin: 10px 0;
     
+}
+
+@media(min-width: 760px){
+    .column{
+        background-color: #e84610;
+        
+
+    }
 }
